--- a/_data/funfacts.yml
+++ b/_data/funfacts.yml
@@ -3,13 +3,13 @@
   text: Total working year
 - counter: 2
   icon: ion-happy-outline
-  text: MIS Development
+  text: MIS Developer
 - counter: 6
   icon: ion-ios-flower-outline
-  text: Retail Strategy Design
+  text: Data Analyst
 - counter: 1.5
   icon: ion-ios-barcode-outline
-  text: Risk Management
+  text: Risk Manager
 - counter: 1
   icon: ion-ios-paperplane-outline
   text: Data Scientist
